# ClumsyCat

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ascii.md  ascii_cat.md  ext_README.md
dev/: cc_build_workflow.md  test-windows.ps1
docs/superpowers/plans/: 2026-04-01-global-config-switcher.md
docs/superpowers/specs/: 2026-03-30-clumsycat-tui-design.md  2026-04-01-global-config-switcher-design.md
src/: app.rs  claude_config.rs  config.rs  fs.rs  lib.rs  main.rs  proxy.rs  search.rs  terminal.rs  theme.rs  tools.rs  ui.rs
