[package]
name = "clumsy-cat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
