[package]
name = "claude-cat"
version = "2.0.0"
edition = "2021"
default-run = "cc"

[[bin]]
name = "cc"
path = "src/main.rs"

[[bin]]
name = "claudecat"
path = "src/main.rs"

[[bin]]
name = "csc"
path = "src/main.rs"

[[bin]]
name = "clumsy"
path = "src/bin/clumsy.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
portable-pty = "0.8"
vte = "0.13"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"
nix = { version = "0.29", features = ["term", "process", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Console",
] }
